collect user satisfaction score

--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -20,11 +20,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.neighbors import NearestNeighbors\n",
     "import pickle\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from recommend import make_recommendations\n",
+    "from recommend import make_recommendations, rate_recs\n",
     "import pymongo"
    ]
   },
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -226,7 +236,7 @@
        "28        0.144842  0.461146  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +275,7 @@
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -310,48 +320,63 @@
      "text": [
       "Rate on a scale of 0-10.\n",
       "    0 is not important and 10 is very important\n",
-      "How important is a forest/mountain setting: 1\n",
-      "How important is visiting palaces/castles: 3\n",
-      "How important is a costal/water setting: 7\n",
-      "How important is historical sites: 9\n",
-      "How important is an urban setting: 3\n",
+      "How important is a forest/mountain setting: 4\n",
+      "How important is visiting palaces/castles: 5\n",
+      "How important is a costal/water setting: 6\n",
+      "How important is historical sites: 5\n",
+      "How important is an urban setting: 5\n",
       "\n",
       "\n",
       "For the following locations give:\n",
       "            \t1 if you have visited and liked\n",
       "            \t-1 if you have visited and disliked\n",
       "            \t0 if you have never been\n",
-      "Rate ('Chamonix', 'France'): 0\n",
-      "Rate ('Kinsale & Cobh', 'Ireland'): 1\n",
-      "Rate ('Cinque Terre', 'Italy'): 0\n",
-      "Rate ('Berlin', 'Germany'): 1\n",
+      "Rate ('Assisi', 'Italy'): 0\n",
+      "Rate ('Delphi', 'Greece'): 0\n",
+      "Rate ('Dover', 'England'): 0\n",
+      "Rate ('Aix-en-Provence', 'France'): 0\n",
+      "Rate ('Warwick & Coventry', 'England'): 0\n",
+      "Rate ('Rouen', 'France'): 0\n",
+      "Rate ('London', 'England'): 0\n",
+      "Rate ('County Donegal', 'Ireland'): 0\n",
       "Rate ('Helsinki', 'Finland'): 0\n",
-      "Rate ('Stonehenge & Avebury', 'England'): 0\n",
-      "Rate ('Oxford', 'England'): 0\n",
-      "Rate ('Oslo', 'Norway'): 0\n",
-      "Rate ('Albi', 'France'): 0\n",
-      "Rate ('Lake District', 'England'): 0\n",
+      "Rate ('Bratislava', 'Slovakia'): 0\n",
       "\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[(('Cinque Terre', 'Italy'), 0.022409692021450045),\n",
-       " (('Antibes', 'France'), 0.027670820404435803),\n",
-       " (('Cologne', 'Germany'), 0.03089262835438933),\n",
-       " (('Tirol', 'Austria'), 0.030921621776826225),\n",
-       " (('Hamburg', 'Germany'), 0.030984516605879975)]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "make_recommendations(cities_with_scores, nearest_neighbor)"
+    "recommendations = make_recommendations(cities_with_scores, nearest_neighbor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determine strength of recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If interested enter 1, else 0\n",
+      "('Oxford', 'England'): 1\n",
+      "('Annecy', 'France'): 1\n",
+      "('Warwick & Coventry', 'England'): 1\n",
+      "('County Clare & the Burren', 'Ireland'): 1\n",
+      "('Aran Islands', 'Ireland'): 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rate_recs(recommendations)"
    ]
   },
   {
@@ -368,8 +393,35 @@
     "# mc = pymongo.MongoClient(conn_string)\n",
     "# city_db = mc['city_database']\n",
     "# user_coll = city_db['user_collection']\n",
-    "# user_coll.insert_one({'test': 'testing'})\n",
-    "# user_coll.find_one()\n",
+    "# user_coll.insert_one({'test': 'testing'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# user_coll.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x1a172c8c48>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# user_coll.delete_one(user_coll.find_one())"
    ]
   },
