remove unnecessary while loop

--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -30,12 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
     "import pickle\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from recommend import make_recommendations, rate_recs\n",
-    "import pymongo"
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "from recommend import make_recommendations, rate_recs"
    ]
   },
   {
@@ -311,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,27 +318,27 @@
      "text": [
       "Rate on a scale of 0-10.\n",
       "    0 is not important and 10 is very important\n",
-      "How important is a forest/mountain setting: 4\n",
-      "How important is visiting palaces/castles: 5\n",
-      "How important is a costal/water setting: 6\n",
-      "How important is historical sites: 5\n",
-      "How important is an urban setting: 5\n",
+      "How important is a forest/mountain setting: 1\n",
+      "How important is visiting palaces/castles: 8\n",
+      "How important is a coastal/water setting: 5\n",
+      "How important is historical sites: 9\n",
+      "How important is an urban setting: 3\n",
       "\n",
       "\n",
       "For the following locations give:\n",
       "            \t1 if you have visited and liked\n",
       "            \t-1 if you have visited and disliked\n",
       "            \t0 if you have never been\n",
-      "Rate ('Assisi', 'Italy'): 0\n",
-      "Rate ('Delphi', 'Greece'): 0\n",
-      "Rate ('Dover', 'England'): 0\n",
-      "Rate ('Aix-en-Provence', 'France'): 0\n",
-      "Rate ('Warwick & Coventry', 'England'): 0\n",
-      "Rate ('Rouen', 'France'): 0\n",
-      "Rate ('London', 'England'): 0\n",
-      "Rate ('County Donegal', 'Ireland'): 0\n",
-      "Rate ('Helsinki', 'Finland'): 0\n",
-      "Rate ('Bratislava', 'Slovakia'): 0\n",
+      "Rate ('Burgundy', 'France'): 0\n",
+      "Rate ('Tirol', 'Austria'): 1\n",
+      "Rate ('Bruges', 'Belgium'): 1\n",
+      "Rate ('Lake Bled', 'Slovenia'): 1\n",
+      "Rate ('Granada', 'Spain'): 1\n",
+      "Rate ('Canterbury', 'England'): 1\n",
+      "Rate ('Nice', 'France'): 1\n",
+      "Rate ('Paris', 'France'): 1\n",
+      "Rate ('Cologne', 'Germany'): 0\n",
+      "Rate ('Cinque Terre', 'Italy'): 0\n",
       "\n",
       "\n"
      ]
@@ -359,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,62 +365,16 @@
      "output_type": "stream",
      "text": [
       "If interested enter 1, else 0\n",
-      "('Oxford', 'England'): 1\n",
-      "('Annecy', 'France'): 1\n",
-      "('Warwick & Coventry', 'England'): 1\n",
-      "('County Clare & the Burren', 'Ireland'): 1\n",
-      "('Aran Islands', 'Ireland'): 0\n"
+      "('Rouen', 'France'): 0\n",
+      "('Stratford', 'England'): 0\n",
+      "('Sarlat-la-Canéda', 'France'): 0\n",
+      "('Salzburg', 'Austria'): 1\n",
+      "('Provence', 'France'): 1\n"
      ]
     }
    ],
    "source": [
     "rate_recs(recommendations)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# to delete user ratings from the user collection while I am testing functionality\n",
-    "\n",
-    "# with open('.secrets/password.txt', 'r') as f:\n",
-    "#     conn_string = f.read().strip()\n",
-    "\n",
-    "# mc = pymongo.MongoClient(conn_string)\n",
-    "# city_db = mc['city_database']\n",
-    "# user_coll = city_db['user_collection']\n",
-    "# user_coll.insert_one({'test': 'testing'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# user_coll.find_one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1a172c8c48>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# user_coll.delete_one(user_coll.find_one())"
    ]
   },
   {
