attempt to get user scores in flask

--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,29 +318,27 @@
      "text": [
       "Rate on a scale of 0-10.\n",
       "    0 is not important and 10 is very important\n",
-      "How important is a forest/mountain setting: 1\n",
-      "How important is visiting palaces/castles: 8\n",
-      "How important is a coastal/water setting: 5\n",
-      "How important is historical sites: 9\n",
-      "How important is an urban setting: 3\n",
+      "How important is a forest/mountain setting: 0\n",
+      "How important is visiting palaces/castles: 0\n",
+      "How important is a coastal/water setting: 10\n",
+      "How important is historical sites: 0\n",
+      "How important is an urban setting: 10\n",
       "\n",
       "\n",
       "For the following locations give:\n",
       "            \t1 if you have visited and liked\n",
       "            \t-1 if you have visited and disliked\n",
       "            \t0 if you have never been\n",
-      "Rate ('Burgundy', 'France'): 0\n",
-      "Rate ('Tirol', 'Austria'): 1\n",
-      "Rate ('Bruges', 'Belgium'): 1\n",
-      "Rate ('Lake Bled', 'Slovenia'): 1\n",
-      "Rate ('Granada', 'Spain'): 1\n",
-      "Rate ('Canterbury', 'England'): 1\n",
-      "Rate ('Nice', 'France'): 1\n",
-      "Rate ('Paris', 'France'): 1\n",
-      "Rate ('Cologne', 'Germany'): 0\n",
-      "Rate ('Cinque Terre', 'Italy'): 0\n",
-      "\n",
-      "\n"
+      "Rate ('Portrush & the Antrim Coast', 'Ireland'): 0\n",
+      "Rate ('Durham', 'England'): 0\n",
+      "Rate ('Connemara & County Mayo', 'Ireland'): 0\n",
+      "Rate ('York', 'England'): 0\n",
+      "Rate ('Blackpool', 'England'): 0\n",
+      "Rate ('Bath', 'England'): 0\n",
+      "Rate ('Lucca', 'Italy'): 0\n",
+      "Rate ('Camino de Santiago', 'Spain'): 0\n",
+      "Rate ('Derry', 'Ireland'): 0\n",
+      "Rate ('Oslo', 'Norway'): 0\n"
      ]
     }
    ],
@@ -365,11 +363,11 @@
      "output_type": "stream",
      "text": [
       "If interested enter 1, else 0\n",
-      "('Rouen', 'France'): 0\n",
-      "('Stratford', 'England'): 0\n",
-      "('Sarlat-la-Canéda', 'France'): 0\n",
-      "('Salzburg', 'Austria'): 1\n",
-      "('Provence', 'France'): 1\n"
+      "('Bergen', 'Norway'): 0\n",
+      "('Haarlem', 'Netherlands'): 1\n",
+      "('Olympia', 'Greece'): 1\n",
+      "('Split', 'Croatia'): 0\n",
+      "('Connemara & County Mayo', 'Ireland'): 0\n"
      ]
     }
    ],
