--- a/recommend_by_nearest_topic_score.ipynb
+++ b/recommend_by_nearest_topic_score.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "                 radius=1.0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,11 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pickle.dump(nearest_neighbor, open('models/nn_model.pkl', 'wb'))\n",
+    "# pickle.dump(nearest_neighbor, open('models/nn_model.pkl', 'wb'))\n",
     "nearest_neighbor = pickle.load(open('models/nn_model.pkl', 'rb'))"
    ]
   },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -318,27 +318,27 @@
      "text": [
       "Rate on a scale of 0-10.\n",
       "    0 is not important and 10 is very important\n",
-      "How important is a forest/mountain setting: 0\n",
-      "How important is visiting palaces/castles: 0\n",
+      "How important is a forest/mountain setting: 2\n",
+      "How important is visiting palaces/castles: 7\n",
       "How important is a coastal/water setting: 10\n",
-      "How important is historical sites: 0\n",
-      "How important is an urban setting: 10\n",
+      "How important is historical sites: 8\n",
+      "How important is an urban setting: 1\n",
       "\n",
       "\n",
       "For the following locations give:\n",
       "            \t1 if you have visited and liked\n",
       "            \t-1 if you have visited and disliked\n",
       "            \t0 if you have never been\n",
-      "Rate ('Portrush & the Antrim Coast', 'Ireland'): 0\n",
-      "Rate ('Durham', 'England'): 0\n",
-      "Rate ('Connemara & County Mayo', 'Ireland'): 0\n",
-      "Rate ('York', 'England'): 0\n",
-      "Rate ('Blackpool', 'England'): 0\n",
-      "Rate ('Bath', 'England'): 0\n",
-      "Rate ('Lucca', 'Italy'): 0\n",
+      "Rate ('Tirol', 'Austria'): 0\n",
+      "Rate ('Alsace', 'France'): 0\n",
+      "Rate ('Black Forest', 'Germany'): 0\n",
+      "Rate ('Nürnberg', 'Germany'): 0\n",
+      "Rate ('Cinque Terre', 'Italy'): 0\n",
       "Rate ('Camino de Santiago', 'Spain'): 0\n",
-      "Rate ('Derry', 'Ireland'): 0\n",
-      "Rate ('Oslo', 'Norway'): 0\n"
+      "Rate ('Warwick & Coventry', 'England'): 0\n",
+      "Rate ('Chamonix', 'France'): 0\n",
+      "Rate ('Stonehenge & Avebury', 'England'): 0\n",
+      "Rate ('York', 'England'): 0\n"
      ]
     }
    ],
@@ -355,19 +355,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "If interested enter 1, else 0\n",
-      "('Bergen', 'Norway'): 0\n",
-      "('Haarlem', 'Netherlands'): 1\n",
-      "('Olympia', 'Greece'): 1\n",
-      "('Split', 'Croatia'): 0\n",
-      "('Connemara & County Mayo', 'Ireland'): 0\n"
+      "If interested in visiting enter 1, else 0\n",
+      "('Orvieto', 'Italy'): 1\n",
+      "('Portrush & the Antrim Coast', 'Ireland'): 1\n",
+      "('Northern Ireland', 'Ireland'): 0\n",
+      "('Kenmare & the Ring of Kerry', 'Ireland'): 0\n",
+      "('Frankfurt', 'Germany'): 1\n"
      ]
     }
    ],
