fix error with periods in city names

--- a/data_preparation.ipynb
+++ b/data_preparation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     "from nltk.stem.porter import *\n",
     "import nltk\n",
     "nltk.download('wordnet')\n",
-    "from text_cleaning import lemmatize_and_stem, preprocess, get_aggregate_score\n",
+    "from text_cleaning import lemmatize_and_stem, preprocess, get_aggregate_score, replace_periods\n",
     "import time\n",
     "import urllib.request\n",
     "from collections import Counter\n",
@@ -114,86 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>city_summary</th>\n",
-       "      <th>country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Danube Valley</td>\n",
-       "      <td>The Danube is at its romantic best just west o...</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Hallstatt</td>\n",
-       "      <td>Lovable Hallstatt is a tiny town bullied onto ...</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Salzburg</td>\n",
-       "      <td>Thanks to its charmingly preserved old town, s...</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Tirol</td>\n",
-       "      <td>Mountainous Tirol — in Austria's western panha...</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vienna</td>\n",
-       "      <td>Vienna is the capital of Austria, the cradle o...</td>\n",
-       "      <td>Austria</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            city                                       city_summary  country\n",
-       "0  Danube Valley  The Danube is at its romantic best just west o...  Austria\n",
-       "1      Hallstatt  Lovable Hallstatt is a tiny town bullied onto ...  Austria\n",
-       "2       Salzburg  Thanks to its charmingly preserved old town, s...  Austria\n",
-       "3          Tirol  Mountainous Tirol — in Austria's western panha...  Austria\n",
-       "4         Vienna  Vienna is the capital of Austria, the cradle o...  Austria"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# cities_df = pickle.load(open('data/cities.pkl', 'rb'))\n",
+    "#cities_df = pickle.load(open('data/cities.pkl', 'rb'))\n",
     "# cities_df.head()"
    ]
   },
@@ -1583,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1537,7 @@
        "426"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1681,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1704,7 +1629,7 @@
        " (4, 0.08005066)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1715,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1865,7 @@
        " {0: 0.24956855, 1: 0.13237642, 2: 0.1631279, 3: 0.16528764, 4: 0.28963953}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2049,7 +1974,7 @@
        "4  0.122002  0.493214  0.108736  0.138116  0.137931"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2060,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2070,7 @@
        "4         0.122002  0.493214      0.108736        0.138116  0.137931"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2354,7 +2279,7 @@
        "28        0.144842  0.461147  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2365,7 +2290,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_and_topics['city'] = cities_and_topics['city'].map(replace_periods)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>city_summary</th>\n",
+       "      <th>country</th>\n",
+       "      <th>forest_mountain</th>\n",
+       "      <th>palaces</th>\n",
+       "      <th>island_water</th>\n",
+       "      <th>historical_ww2</th>\n",
+       "      <th>urban</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [city, city_summary, country, forest_mountain, palaces, island_water, historical_ww2, urban]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities_and_topics.loc[cities_and_topics['city'] == 'St. Andrews']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2467,7 @@
        "max           0.574893    0.548769      0.570963        0.598127    0.533665"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2488,11 +2478,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pickle.dump(cities_and_topics, open('data/cities_with_topic_scores.pkl', 'wb'))"
+    "# pickle.dump(cities_and_topics, open('data/cities_with_topic_scores.pkl', 'wb'))"
    ]
   },
   {
